application modifications
