# src/main/resources/JacoboMil-io-builders-2.0.0-oas3-resolved.yaml
@@ -92,7 +92,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AccountResponse'
 
-  /accounts/{iban}/balances:
+  /accounts/{accountId}/balances:
     get:
       tags:
         - Accounts
@@ -100,15 +100,16 @@ paths:
       description: Retrieve account balance
       operationId: get_account_balance
       parameters:
-        - name: iban
+        - name: accountId
           in: path
           required: true
           style: simple
           explode: false
           schema:
-            maxLength: 24
-            pattern: ([a-zA-Z]{2})\s*\t*(\d{2})\s*\t*(\d{4})\s*\t*(\d{4})\s*\t*(\d{2})\s*\t*(\d{10})
+            maxLength: 36
+            pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
             type: string
+            format: uuid
       responses:
         200:
           description: OK
@@ -117,7 +118,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AccountBalanceResponse'
 
-  /accounts/{iban}/transactions:
+  /accounts/{accountId}/transactions:
     get:
       tags:
         - Accounts
@@ -125,15 +126,16 @@ paths:
       description: Retrieve all transactions for an account
       operationId: get_account_transactions
       parameters:
-        - name: iban
+        - name: accountId
           in: path
           required: true
           style: simple
           explode: false
           schema:
-            maxLength: 24
-            pattern: ([a-zA-Z]{2})\s*\t*(\d{2})\s*\t*(\d{4})\s*\t*(\d{4})\s*\t*(\d{2})\s*\t*(\d{10})
+            maxLength: 36
+            pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
             type: string
+            format: uuid
       responses:
         200:
           description: OK
@@ -157,7 +159,7 @@ paths:
         required: true
       responses:
         201:
-          description: OK
+          description: CREATED
           content:
             application/json:
               schema:
@@ -259,11 +261,12 @@ components:
     AccountTransactionsResponse:
       type: object
       properties:
-        iban:
-          maxLength: 24
-          pattern: ([a-zA-Z]{2})\s*\t*(\d{2})\s*\t*(\d{4})\s*\t*(\d{4})\s*\t*(\d{2})\s*\t*(\d{10})
+        accountId:
+          maxLength: 36
+          pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
-          example: ES0000000000000000000000
+          format: uuid
+          example: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
         transactions:
           $ref: '#/components/schemas/TransactionsResponse'
     AccountResponse:
@@ -293,24 +296,26 @@ components:
       type: object
       required:
         - amount
-        - destinationAccountIban
-        - originAccountIban
+        - destinationAccountId
+        - originAccountId
       properties:
         amount:
           maximum: 90000000000000
           minimum: 0
           type: number
           example: 00.00
-        destinationAccountIban:
-          maxLength: 24
-          pattern: ([a-zA-Z]{2})\s*\t*(\d{2})\s*\t*(\d{4})\s*\t*(\d{4})\s*\t*(\d{2})\s*\t*(\d{10})
+        destinationAccountId:
+          maxLength: 36
+          pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
-          example: ES0000000000000000000000
-        originAccountIban:
-          maxLength: 24
-          pattern: ([a-zA-Z]{2})\s*\t*(\d{2})\s*\t*(\d{4})\s*\t*(\d{4})\s*\t*(\d{2})\s*\t*(\d{10})
+          format: uuid
+          example: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+        originAccountId:
+          maxLength: 36
+          pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
-          example: ES0000000000000000000000
+          format: uuid
+          example: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
     TransactionResponse:
       type: object
       properties:
